--- a/text/computability/completeness/completeness.tex
+++ b/text/computability/completeness/completeness.tex
@@ -433,9 +433,9 @@ problem for those. In fact, if we can compile {\tt loopInverse} into a
 language, then the new language can not solve its own halting problem, even 
 if it was more powerful than \WHILE.
 
-\begin{corrolary}
+\begin{corollary}
 	No language at least as powerful than \WHILE can solve its own halting problem.
-\end{corrolary}
+\end{corollary}
 
 \subsection{Rice's Theorem}
 \label{Rice}
