--- a/text/main.tex
+++ b/text/main.tex
@@ -78,7 +78,7 @@
 	\ifthenelse{\isempty{#1}}{}{^{#1}}}}
 \newtheorem{prop}{Proposition}
 \newtheorem{theorem}{Theorem}
-\newtheorem{corrolary}{Corrolary}
+\newtheorem{corollary}{Corollary}
 \newtheorem{thesis}{Thesis}
 \theoremstyle{definition}
 \newtheorem{defn}{Definition}
