--- a/text/complexity/complexity/complexity.tex
+++ b/text/complexity/complexity/complexity.tex
@@ -165,7 +165,7 @@ hierarchy is in fact interleaved, as the following theorems will prove.
 \end{theorem}
 \begin{proof}
 	\begin{enumerate}
-		\item Assume that $P\in\SPACE[f(x)]$, then $\measurespace{P}(x)\leq f(\abs{x})\forall x$.
+		\item Assume that $P\in\SPACE[f(x)]$, then $\forall x: \measurespace{P}(x)\leq f(\abs{x})$.
 		\item Assume that $\abs{x}$ is fixed, then in how many ways can the 
 			memory arranged to hold that property? Each cell can hold any of the 
 			symbols of $\Gamma$, so there are $\abs{\Gamma}^{f(\abs{x})}$ ways to 
