--- a/text/complexity/langcomplexity/langcomplexity.tex
+++ b/text/complexity/langcomplexity/langcomplexity.tex
@@ -305,7 +305,7 @@ compilation. Maybe more surprising is, that the complexity classes \PTIME and
 
 \begin{defn}
 	For a complexity class $C$, a problem $P$ is \emph{hard}, if 
-	$\forall c\in C: c \reducesTo P$.
+	$\forall c\in C: c \reducesTo_{\PTIME} P$.
 
 	The problem $P$ is \emph{$C$-complete}, if $P$ is $C$-hard and $P\in C$.
 \end{defn}
