--- a/text/introduction/while/while.tex
+++ b/text/introduction/while/while.tex
@@ -34,3 +34,5 @@ $\interpret{eval}(inverse.inverse)$ is just an infinite recursion.
 Of course it could be that while this proof does not work, something else might
 prevent us from implementing the {\tt eval} procedure. As we will see in
 ~\ref{sec:self}, that is not the case.
+
+Part of this work is an implementation of the \WHILE programming language, which can be found at \url{
